testsuite/tests/rename/should_fail/T19843e.stderr

T19843e.hs:9:6: error:
    Not in scope: data constructor ‘Map’
    Suggested fix: Perhaps use ‘Mup’ (line 7)
